--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_005.cshtml
@@ -188,7 +188,7 @@
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
-                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
+                    [@Core.Erp.Web.Helps.SessionFixed.IdEmpresa] @Core.Erp.Web.Helps.SessionFixed.NomEmpresa
                 </div>
                 <!-- /.box-footer-->
             </div>
