--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -287,7 +287,7 @@
                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            settings.Properties.AllowMouseWheel = false;
-                           settings.Properties.ClientSideEvents.DateChanged = "function(s,e){CambiarVcto();FechaRetencion.SetValue(s.GetValue()}";
+                           settings.Properties.ClientSideEvents.DateChanged = "function(s,e){CambiarVcto();FechaRetencion.SetValue(s.GetValue());}";
                            //settings.Properties.ClientSideEvents.DateChanged = "function(s,e){co_FechaContabilizacion.SetValue(s.GetValue());}";
                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.co_FechaFactura, "", new { @class = "text-danger" })
