--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index.cshtml
@@ -81,6 +81,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>      </label>
+                            @Html.DevExpress().CheckBoxFor(q => q.mostrarAnulados,
+                         settings =>
+                         {
+                             settings.Name = "mostrarAnulados";
+                             settings.Checked = false;
+                             settings.Text = "Mostrar documentos electrónicos";
+                         }
+                     ).GetHtml()
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -100,11 +114,11 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_deudas", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_deudas", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal, MostrarDocumentosElectronicos = Model.mostrarAnulados })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+            [@Core.Erp.Web.Helps.SessionFixed.IdEmpresa] @Core.Erp.Web.Helps.SessionFixed.NomEmpresa
         </div>
         <!-- /.box-footer-->
     </div>
