--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_deudas";
-        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
+        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal, MostrarDocumentosElectronicos = ViewBag.MostrarDocumentosElectronicos };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -56,6 +56,11 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
+            if (Convert.ToString(e.GetValue("Estado")) != "I" && e.GetValue("fecha_autorizacion") != null)
+            {
+                e.Row.ForeColor = System.Drawing.Color.Blue;
+            }
+
             if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
@@ -86,13 +91,12 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdCbteCble_Ogiro", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("co_factura", "Documento").Width = Unit.Percentage(10);
-        settings.Columns.Add("info_proveedor.info_persona.pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
-        settings.Columns.Add("co_observacion", "Observación").Width = Unit.Percentage(35);
+        settings.Columns.Add("IdCbteCble_Ogiro", "ID").Width = Unit.Percentage(7);
+        settings.Columns.Add("Descripcion", "Tipo").Width = Unit.Percentage(15);
+        settings.Columns.Add("co_factura", "Documento").Width = Unit.Percentage(15);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "co_fechaOg";
+            column.FieldName = "co_FechaFactura";
             column.Caption = "Fecha";
             column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
@@ -102,9 +106,8 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add("co_subtotal_iva", "SubIVA").Width = Unit.Percentage(10);
-        settings.Columns.Add("co_valoriva", " IVA").Width = Unit.Percentage(10);
-        settings.Columns.Add("co_subtotal_siniva", " SubSin IVA").Width = Unit.Percentage(10);
+        settings.Columns.Add("info_proveedor.info_persona.pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(20);
+        settings.Columns.Add("co_observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add("co_total", "Total").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
@@ -127,6 +130,17 @@
             column.Width = Unit.Percentage(5);
         });
 
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                if (Convert.ToBoolean(ViewBag.MostrarDocumentosElectronicos ?? false))
+                {
+                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_020", "CuentasPorPagarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdTipoCbte_Ogiro = DataBinder.Eval(c.DataItem, "IdTipoCbte_Ogiro").ToString(), IdCbteCble_Ogiro = DataBinder.Eval(c.DataItem, "IdCbteCble_Ogiro").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                }
+            });
+            column.Width = Unit.Percentage(5);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
